debugging alignment issues with mobile navigation

--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -5,13 +5,7 @@
 }
 
 .hamburger__menu {
-    // position: absolute;
-    // right: 0;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: end;
-    align-items: center;
+    display: none;
 }
 
 .navigation {
@@ -65,14 +59,30 @@
 }
 
 @media(max-width: 950px) {
+
+    .hamburger__menu {
+        // position: absolute;
+        // right: 0;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: end;
+        align-items: center;
+    }
+
     .navigation {
+        border: 1px solid red;
         flex-direction: column;
         align-items: end;
-        margin-top: 2rem;
 
         &__wrapper {
             flex-direction: column;
-            // align-items: end;
+            align-items: start;
+        }
+
+        &__item {
+            width: fit-content;
+            border: 1px solid blue;
         }
     }
 }
